Ensure BG stretches full height / width
Fixes #19

--- a/static/styles/main.scss
+++ b/static/styles/main.scss
@@ -31,6 +31,8 @@ $color__contast: #343739;
 --------------------------------------------------------- */
 html {
     -webkit-font-smoothing: antialiased;
+    height:100%;
+    min-height:100%;
 }
 body {
     background-image: url(/static/images/bigbg.jpg);
@@ -39,6 +41,7 @@ body {
     background-position: center center;
     background-attachment: fixed;
     background-color: #050D10;
+    min-height: 100%;
     font-family: $font_stack;
     font-size: 100%;
     line-height: em(16);
